Fix Whitespace bug, push v1.9.5

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -68,3 +68,8 @@ body, html {
 .bg-settings {
   background-color: #40474e;
 }
+
+.hide-scrollbar {
+  overflow: -moz-hidden-unscrollable;
+  overflow: hidden;
+}
